--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 /* Importing google fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Miniver&family=Poppins:ital, wght@0, 400;0,500;0,600;0,700;1,400&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-:root{
+
+:root {
     /*colors*/
     --white-color: #fff;
-    --dark-color:#252525;
-    --primary-color:#3b141c;
-    --secondary-color:#f3961c;
-    --light-pink-color:#f1a5a5;
-    --medium-gray-color:#ccc;
+    --dark-color: #252525;
+    --primary-color: #3b141c;
+    --secondary-color: #f3961c;
+    --light-pink-color: #fadfdf;
+    --medium-gray-color: #ccc;
 
     /*Font size*/
     --font-size-s: 0.9rem;
@@ -38,32 +39,53 @@
     --border-radius-circle: 50%;
 
     /*Site max width*/
-    --site-max-width:1300px;
-    
+    --site-max-width: 1300px;
+
 
 }
+
 /* styling for whole site*/
-ul{
+ul {
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-button{
+button {
     cursor: pointer;
     border: none;
     background: none;
 }
-img{
+
+img {
     width: 100%;
 }
+
 .section-content {
     margin: 0 auto;
     padding: 0 20px;
     max-width: var(--site-max-width);
 }
+
+.section-title{
+    text-align: center;
+    padding: 60px 0 100px;
+    text-transform: uppercase;
+    font-family: var(--font-size-xl);
+}
+
+.section-title::after{
+    content:"";
+    width: 80px;
+    height: 5px;
+    display: block;
+    margin: 10px auto 0;
+    border-radius: var(--border-radius-s);
+    background: var(--secondary-color);
+}
+
 /*Navbar styling*/
 header {
     position: fixed;
@@ -71,33 +93,35 @@ header {
     z-index: 5;
     background: var(--primary-color);
 }
-/* header.navbar{
+
+ header .navbar{
    display: flex;
     padding: 20px;
     align-items: center;
     justify-content: space-between;
-} */
-.navbar{
+} 
+.navbar {
     display: flex;
     padding: 20px;
     align-items: center;
     justify-content: space-between;
 
 }
-.navbar .nav-logo .logo-text{
+
+.navbar .nav-logo .logo-text {
     color: var(--white-color);
     font-size: var(--font-size-xl);
     font-weight: var(--font-weight-semibold);
     display: inline;
 }
 
-.navbar .nav-menu{
+.navbar .nav-menu {
     display: flex;
     gap: 10px;
 
 }
 
-.navbar .nav-menu .nav-link{
+.navbar .nav-menu .nav-link {
     padding: 10px 18px;
     color: var(--white-color);
     font-size: var(--font-size-m);
@@ -105,20 +129,22 @@ header {
     transition: 0.3s ease;
 }
 
-.navbar .nav-menu .nav-link:hover{
+.navbar .nav-menu .nav-link:hover {
     color: var(--primary-color);
     background: var(--secondary-color);
 }
-.navbar :where(#menu-close-button, #menu-open-button){
+
+.navbar :where(#menu-close-button, #menu-open-button) {
     display: none;
 }
+
 /* hero-section styling*/
-.hero-section{
+.hero-section {
     min: height 100vh;
     background: var(--primary-color);
 }
 
-.hero-section .section-content{
+.hero-section .section-content {
     display: flex;
     align-items: center;
     min-height: 100vh;
@@ -126,29 +152,31 @@ header {
     justify-content: space-between;
 }
 
-.hero-section .hero-details .title{
+.hero-section .hero-details .title {
     font-size: var(--font-size-xxl);
-    color:var(--secondary-color);
-    font-family:cursive, sans-serif;
-} 
+    color: var(--secondary-color);
+    font-family: cursive, sans-serif;
+}
 
-.hero-section .hero-details .subtitle{
+.hero-section .hero-details .subtitle {
     margin-top: 8px;
     max-width: 70%;
     font-size: var(--font-size-xl);
     font-weight: var(--font-weight-semibold);
 }
 
-.hero-section .hero-details .description{
-     max-width: 70%;
-     margin: 24px 0 40px;
-     font-size: var(--font-size-m)
+.hero-section .hero-details .description {
+    max-width: 70%;
+    margin: 24px 0 40px;
+    font-size: var(--font-size-m)
 }
-.hero-section .hero-details .buttons{
+
+.hero-section .hero-details .buttons {
     display: flex;
     gap: 23px;
 }
-.hero-section .hero-details .button{
+
+.hero-section .hero-details .button {
     padding: 10px 26px;
     border: 2px solid transparent;
     color: var(--primary-color);
@@ -159,46 +187,156 @@ header {
 }
 
 .hero-section .hero-details .button:hover,
-.hero-section .hero-details .contact-us{
+.hero-section .hero-details .contact-us {
     color: var(--white-color);
     border-color: var(--white-color);
     background: transparent;
 }
-.hero-section .hero-details .contact-us:hover{
+
+.hero-section .hero-details .contact-us:hover {
     color: var(--primary-color);
     border-color: var(--secondary-color);
-    background:var(--secondary-color);
+    background: var(--secondary-color);
 
 }
-.hero-section .hero-image-wrapper{
+
+.hero-section .hero-image-wrapper {
     max-width: 500px;
     margin-right: 30px;
 }
+/* About section styling */
+.about-section{
+    padding: 120px 0;
+    background: var(--light-pink-color);
+}
+.about-section .section-content{
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about-section .about-image-wrapper .about-image{
+    width:400px;
+    height:400px;
+    object-fit: cover;
+    border-radius: var(--border-radius-circle);
+}
+.about-section .about-details .section-title{
+    padding: 0;
+}
+.about-section .about-details{
+    max-width: 50%;
+}
+.about-section .about-details .text{
+    line-height: 30px;
+    margin: 50px 0 30px;
+    text-align: center;
+    font-size: var(--font-size-m)
+}
+
+.about-section .social-link-list{
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+}
+.about-section .social-link-list{
+    transition: 0.2s ease;
+    font-size: var(--font-size-l);
+    color: var(--primary-color);
+
+}
+.about-section .social-link-list .social-link:hover{
+    color: var(--secondary-color);
+}
+
+/* Menu section  styling*/
+.menu-section{
+    color: var(--white-color);
+    background: var(--dark-color);
+    padding: 50px 0 100px;
+}
+
+.menu-section .menu-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 110px;
+    align-items: center;
+    justify-content: space-between;
+}
+.menu-section .menu-list .menu-item{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calc(100% / 3 - 110px)
+}
+.menu-section .menu-list .menu-item .about-image{
+    max-width: 83%;
+    aspect-ratio: 1;
+    margin-bottom: 15px;
+    object-fit: contain;
+}
+.menu-section .menu-list .menu-item .name{
+    margin:12px 0;
+    font-size: var(--font-size-l);
+    font-weight: var(--font-weight-semibold);
+}
+.menu-section .menu-list .menu-item .text{
+    font-size: var(--font-size-m);
+}
+
+/* Responsive media query code for max width 1024px*/
+@media screen and (max-width: 1024px){
+    .menu-section .menu-list{
+        gap: 60px;
+    }
+    .menu-section .menu-list .menu-item{
+        width: calc(100% / 3 - 60px)
+    }
+}
+
+
+
 /* Responsive media query code for max width 900px*/
 @media screen and (max-width: 900px) {
-    :root{
+    :root {
         --font-size-m: 1rem;
         --font-size-l: 1.3rem;
         --font-size-xl: 1.5rem;
         --font-size-xxl: 1.8rem;
     }
 
-    .navbar :where(#menu-close-button, #menu-open-button){
+    body.show-mobile-menu header::before {
+        content: "";
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        backdrop-filter: blur(5px);
+        background: rgba(0, 0, 0, 0.2);
+    }
+
+    .navbar :where(#menu-close-button, #menu-open-button) {
         display: block;
         font-size: var(--font-size-l);
     }
-    .navbar #menu-close-button{
+
+    .navbar #menu-close-button {
         position: absolute;
         right: 30px;
         top: 30px;
     }
-    .navbar #menu-open-button{
+
+    .navbar #menu-open-button {
         color: var(--white-color);
     }
 
-    .navbar .nav-menu{
+    .navbar .nav-menu {
         display: block;
-        position:fixed;
+        position: fixed;
         left: -300px;
         top: 0;
         width: 300px;
@@ -215,10 +353,67 @@ header {
         left: 0;
     }
 
-    .navbar .nav-menu .nav-link{
+    .navbar .nav-menu .nav-link {
         color: var(--dark-color);
         display: block;
         margin-top: 17px;
         font-size: var(--font-size-l);
     }
+
+    .hero-section .section-content {
+        gap: 50px;
+        text-align: center;
+        padding: 30px 20px 20px;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+
+    .hero-section .hero-details :is(.subtitle, .description) 
+    .about-section .about-details {
+
+        max-width: 100%;
+    }
+    .hero-section  .hero-details .buttons{
+        justify-content: center;
+    }
+
+    .hero-section .hero-image-wrapper {
+        max-width: 270px;
+        margin-right: 0;
+    }
+    .about-section .about-image-wrapper .about-image{
+        width: 100%;
+        height: 100%;
+        max-width: 250px;
+        aspect-ratio: 1;;
+    }
+
+    .about-section .section-content{
+    gap: 70px;
+    flex-direction: column;
+    }
+    
+    .menu-section .menu-list{
+        gap: 30px;
+    }
+
+    .menu-section .menu-list .menu-item{
+        width: calc(100%/ 2 - 30px);
+    }
+    .menu-section .menu-list .menu-item .menu-image{
+        max-width: 200px;
+
+    }
+}
+
+@media screen  and (max-width: 640px){
+    .menu-section .menu-list{
+        gap: 60px;
+            
+    menu-section .menu-list .menu-item{
+        width: 100%;
+    }
+
+
+    
 }
