--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@
 
 
 }
+html{
+    scroll-behavior: smooth;
+
+}
 
 /* styling for whole site*/
 ul {
@@ -287,6 +291,125 @@ header {
     font-size: var(--font-size-m);
 }
 
+/* Gallery Section Styling */
+.gallery-section{
+
+        background: var(--white-color);
+        padding: 50px 0 100px;
+        
+    }
+.gallery-section .gallery-list .gallery-item{
+       display: flex;
+       flex-direction: row;
+        justify-content: center;
+       flex-wrap: wrap;
+       gap: 20px;
+       list-style: none;
+    }
+
+    gallery-section .gallery-list .gallery-item{
+        overflow: hidden;
+        border-radius: var(--border-radius-s);
+        width: calc(100% / 3 - 32px);
+    }
+    .gallery-section  .gallery-item .gallery-image{
+        width: 100%;
+        height: 100%;
+        border-radius: var(--border-radius-s);
+        object-fit: cover;
+        cursor: zoom-in;
+        transition: 0.3s ease;
+    }
+    /* Contact us section styling*/
+    .contact-section{
+        padding: 50px 0 100px;
+        background: var(--light-pink-color);
+
+    }
+    .contact-section .section-content{
+        display:flex;
+        gap: 45px;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .section-content .contact-info-list .contact-info{
+        display: flex;
+        gap: 20px;
+        margin: 20px 0;
+        align-items: center;   
+    }
+    .section-content .contact-info-list .contact-info{
+        font-size: var(--border-radius-m);
+    }
+    .section-content .contact-form .form-input{
+        width: 100%;
+        height: 50px;
+        padding: 0 12px;
+        outline: none;
+        margin-bottom: 16px;
+        background: var(--white-color);
+        border-radius: var(--border-radius-s);
+        border:1px solid var(--medium-gray-color);
+    }
+    .section-content .contact-form{
+        max-width: 50%
+    }
+    .section-content .contact-form .form-input:focus{
+        border-color: var(--secondary-color);
+    }
+    .contact-section .contact-form textarea.form-input{
+        height: 100px;
+        padding: 12px;
+        resize: vertical;
+    }
+    .contact-section .contact-form .submit-button{
+        padding: 10px 26px;
+        margin-top: 10px;
+        color: var(--white-color);
+        font-size: var(--font-size-m);
+        font-weight: var(--font-weight-medium);
+        background: var(--primary-color);
+        border-radius: var(--border-radius-m);
+    }
+
+    /* Footer section styling */
+
+    .footer-section {
+        padding: 20px 0;
+        background: var(--dark-color);
+    }
+    .footer-section .section-content{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .footer-section  :where(.copyright-text, .social-link, .policy-link){
+        color: var(--white-color);
+        transition: 0.2s ease;
+    }
+    .footer-section .social-link-list{
+        display:flex;
+        gap: 25px;
+    }
+    .footer-section .social-link-list .social-link{
+        font-size: var(--font-size-l);
+    }
+    .footer-section .social-link-list .social-link:hover, 
+    .footer-section .policy-text .policy-link:hover{
+        color: var(--secondary-color);
+    }
+    .footer-section .policy-text .separator{
+        margin: 0 5px;
+        color: var(--white-color);
+
+    }
+
+
+
+
+
+
 /* Responsive media query code for max width 1024px*/
 @media screen and (max-width: 1024px){
     .menu-section .menu-list{
@@ -369,7 +492,7 @@ header {
     }
 
     .hero-section .hero-details :is(.subtitle, .description) 
-    .about-section .about-details {
+    .about-section .about-details, .contact-section .contact-form{
 
         max-width: 100%;
     }
@@ -390,7 +513,7 @@ header {
 
     .about-section .section-content{
     gap: 70px;
-    flex-direction: column;
+    flex-direction: column-reverse;
     }
     
     .menu-section .menu-list{
@@ -404,14 +527,27 @@ header {
         max-width: 200px;
 
     }
+    .gallery-section .gallery-list .gallery-item{
+        width: calc(100%/ 2- 30px);
+    }
+    .contact-section .section-content{
+        align-items: center;
+        flex-direction: column-reverse;
+    }
 }
 
 @media screen  and (max-width: 640px){
     .menu-section .menu-list{
         gap: 60px;
+    }
             
-    menu-section .menu-list .menu-item{
+    menu-section .menu-list .menu-item,
+    .gallery-section .gallery-list .gallery-item {
         width: 100%;
+    }
+    .footer-section .section-content{
+        flex-direction: column;
+        gap: 20px;
     }
 
 
